--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "watch-server": "nodemon --ignore \"client/\" index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd client && npm run build",
-    "install": "cd client && npm install"
+    "install": "cd client && npm install",
+    "lint-client": "prettier --check client/src/**/*.{js,css}",
+    "lint-server": "prettier --check server/**/*.js",
+    "lint": "npm run lint-server && npm run lint-client"
   },
   "keywords": [],
   "author": "John Desrosiers",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.0.2",
-    "husky": "^4.0.10",
+    "concurrently": "^5.2.0",
+    "eslint": "^7.3.1",
+    "husky": "^4.2.5",
     "lint-staged": "^9.5.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.4",
     "prettier": "^1.19.1"
   },
   "husky": {
@@ -40,11 +44,11 @@
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.9",
-    "morgan": "^1.9.1",
+    "mongoose": "^5.9.20",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   }
