--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: node_js
 node_js: "12"
-branches:
-  only:
-    - master
 cache:
   directories:
     - node_modules
-
 script:
-  - npm i
+  - npm install
   - npm run lint
+  - npm run test
