--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SECRET=secretkey
 MONGODB_URI=mongodb://localhost/time_tracker_db
-TWILIO_ACCOUNTSID=AC0342c82e469cf73d208fd7d72583961c
-TWILIO_AUTHTOKEN=8b47a4520c481722da9494265e7a213e
+TWILIO_ACCOUNTSID=
+TWILIO_AUTHTOKEN=
