--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ node_js: "12"
 cache:
   directories:
     - node_modules
+branches:
+  only:
+    - master
 script:
   - npm install
   - npm run lint
