--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.4.0",
+    "@devexpress/dx-react-core": "^2.6.4",
+    "@devexpress/dx-react-scheduler": "^2.6.4",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.6.4",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
